IrshadDev/src/objects/Partner__c.object
<CustomObject>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Partner</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Partner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partnera</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>